--- a/example.html
+++ b/example.html
@@ -29,12 +29,18 @@
 		<h4 class="sg-dosis">$font-family-primary: "Dosis", sans-serif; </h4>
 		<h4 class="sg-ptsans">$font-family-complementary: "PT Sans", sans-serif; </h4>
 		<h4 class="sg-ptserif">$font-family-serif: "PT Serif", serif; </h4>
+
 		<hr>
 		<h2 class="sg">Primary headings</h2>
 
 		<h1>Look at me, I'm the heading </h1>
 		<h2>Hey you, I'm a heading two</h2>
 		<h3>I'm pretty important too</h3>
+
+		<pre>&lt;h1&gt;Look at me, I'm the heading&lt;/h1&gt;
+&lt;h2&gt;Hey you, I'm a heading two&lt;/h2&gt;
+&lt;h3&gt;I'm pretty important too&lt;/h3&gt;</pre>
+
 		<hr>
 		<h2 class="sg">Complementary headings</h2>
 		<p class="h2-complementary">Soy un subtítulo que acompaño al h1</p>
@@ -42,21 +48,29 @@
 		<h4 class="h4-complementary">Heading 4</h4>
 		<h5 class="h5-complementary">Heading 5</h5>
 		<h6 class="h6-complementary">Heading 6</h6>
+
+		<pre>&lt;p class="h2-complementary"&gt;Soy un subtítulo que acompaño al h1&lt;/p&gt;
+&lt;h3 class="h3-complementary"&gt;Heading 3&lt;/h3&gt;
+&lt;h4 class="h4-complementary"&gt;Heading 4&lt;/h4&gt;
+&lt;h5 class="h5-complementary"&gt;Heading 5&lt;/h5&gt;
+&lt;h6 class="h6-complementary"&gt;Heading 6&lt;/h6&gt;</pre>
+
 		<hr>
 		<h2 class="sg">Paragraph & link text</h2>
 
 		<p>Hello I'm a <a href="">Paragraph.</a> Maybe I seem not important but I actually am. It just that nobody reads me, but I look great between titles. The longer I am the less I got read. That's my sad true. </p>
+		<pre>&lt;p&gt;Hello I'm a &lt;a href=""&gt;Paragraph.&lt;/a&gt; Maybe I seem not important but I actually am.It just that nobody reads me, but I look great between titles. The longer I am the less I got read. That's my sad true.&lt;/p&gt;</pre>
+
 		<h2 class="sg">Paragraph 2 & link text</h2>
 
 		<p class="p-complementary">Hello I'm a <a href="">Paragraph.</a> Maybe I seem not important but I actually am. It just that nobody reads me, but I look great between titles. The longer I am the less I got read. That's my sad true. </p>
+		<pre>&lt;p class="p-complementary"&gt;Hello I'm a &lt;a href=""&gt;Paragraph.&lt;/a&gt; Maybe I seem not important but I actually am.It just that nobody reads me, but I look great between titles. The longer I am the less I got read. That's my sad true.&lt;/p&gt;</pre>
 
 		<h2 class="sg">Blockquote</h2>
 
 		<blockquote><p>Go fun yourself!</p></blockquote>
-		<hr>
-		<pre>&lt;script&gt;Some code block&lt;/script&gt;</pre>
-		<p>Some <code>&lt;inline code&gt;</code> instead.</p>
 
+		<pre>&lt;blockquote&gt;&lt;p&gt;Go fun yourself!&lt;/p&gt;&lt;/blockquote&gt;</pre>
 		<hr>
 
 		<h2 class="sg">Buttons</h2>
@@ -70,15 +84,20 @@
 		<hr>
 
 		<h2 class="sg">Navigation</h2>
-		<nav>
-			<a href="">Nav Item 1</a>
-			<a href="">Nav Item 2</a>
-			<a href="">Nav Item 3</a>
-		</nav>
 
 		<nav>
-			<a class="log" href="">Inicia sesión</a>
-			<a class="log" href="">Regístrate</a>
+		<ul class=" ">
+      		<li><a href="#">¿Qué es ROOOF?</a>
+      		<li><a href="#">Buscar eventos</a>
+      		<li><a href="#">Crea tu evento</a>
+    	</ul>
+
+    	</nav>
+		<nav>
+    		<ul class="">
+    		  <li><a  class="log" href="#">Regístrate</a>
+    		  <li><a  class="log" href="#">Inicia sesión</a>
+    		</ul>
 		</nav>
 
 		<hr>
