--- a/index.html
+++ b/index.html
@@ -13,28 +13,83 @@
 </head>
 <body>
 
-	<header role="banner">
-		<nav role="navigation"></nav>
+<header class="clearfix">
+   <div class="container">
 
-	</header>
+    <nav class="nav-bar">
+
+           <div class="nav-hold">
+                   <div class="nav-logo">
+                       <a href="#">ROOOF</a>
+                   </div>
+              <div class="nav-menu" id="nav">&#9776;
+              </div>
+              <ul class="nav-items">
+                  <li><a href="#">¿Qué es ROOOF?</a>
+                  <li><a href="#">Buscar eventos</a>
+                  <li><a href="#">Crea tu evento</a>
+              </ul>
+              <ul class="nav-items items-log">
+                 <li><a  class="log" href="#">Regístrate</a>
+                <li><a  class="log" href="#">Inicia sesión</a>
+             </ul>
+           </div>
+
+        </nav>
+
+    </div>
+</header>
 
 
-	<main role="main">
-		<div class="container section">
+	<section class="eventos-destacados">
+		<div class="container">
 			 <div class="titulo">
         		<h1>NO TE ABURRAS EL FIN DE SEMANA</h1>
         		<p class="h2-complementary">en ROOOF tenemos planes para ti</p>
     		</div>
     		<div class="group">
-    			<div class="span4">
-    				<img src="img/destacado_evento_2.jpg" alt="Cat" srcset="img/destacado_evento_2.jpg 2x, img/destacado_evento_2.jpg 1x" sizes="(min-width:480px) 100vw, 50vw">
+    			<div class="span4 evento-img">
+    				<li class="dos evento-item">
+                        <a href="milky.html">
+                        <div class="vertical-center">
+                            <h3 class="evento-item_title">THE MILKY WAY EXPRESS</h3>
+                            <p class="evento-item_tag">
+                            #Arte #Gastromonía
+                            </p>
+                        </div>
+                        </a>
+                    </li>
     			</div>
-    			<div class="span4">
-    				<img src="img/destacado_evento_2.jpg" alt="Cat" srcset="img/destacado_evento_2.jpg 2x, img/destacado_evento_2.jpg 1x" sizes="(min-width:480px) 100vw, 50vw">
-    			</div>
-    			<div class="span4">
-    				<img src="img/destacado_evento_2.jpg" alt="Cat" srcset="img/destacado_evento_2.jpg 2x, img/destacado_evento_2.jpg 1x" sizes="(min-width:480px) 100vw, 50vw">
-    			</div>
+
+                <div class="span4">
+                    <div class="evento-img">
+                    <li class="dos evento-item">
+                        <a href="milky.html">
+                        <div class="vertical-center">
+                            <h3 class="evento-item_title">THE MILKY WAY EXPRESS</h3>
+                            <p class="evento-item_tag">
+                            #Arte #Gastromonía
+                            </p>
+                        </div>
+                        </a>
+                    </li>
+                    </div>
+                </div>
+
+                <div class="span4 evento-img">
+                    <li class="dos evento-item">
+                        <a href="milky.html">
+                        <div class="vertical-center">
+                            <h3 class="evento-item_title">THE MILKY WAY EXPRESS</h3>
+                            <p class="evento-item_tag">
+                            #Arte #Gastromonía
+                            </p>
+                        </div>
+                        </a>
+                    </li>
+                </div>
+
+
     		</div>
     		<div class="text-center">
     			<p>
@@ -42,7 +97,7 @@
     					 ver más eventos</a>
     				</p>
 				</div>
-    		</div>
+    		</section>
     		<section class="asistir">
     		<div class="container">
     			<div class="titulo">
